Added integration test for MainServlet